--- a/views/index.erb
+++ b/views/index.erb
@@ -6,6 +6,16 @@
             <link rel="stylesheet" type="text/css" href="/css/styles.css">
     </head>
     <body>
-        <div></div>
+        <div class="index_div">
+            <form>
+                <div class="f_name">
+                <input type="text" name="first_name" value="Enter First Name">
+                </div>
+                <div class="l_name">
+                <input type="text" name="last_name" value="Enter Last Name"><br>
+                </div>
+                <div class="submit"><input type="submit" value="Submit"></div>
+            </form>
+        </div>
     </body>
 </html>
