done styling first page

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,19 +2,21 @@
     <head>
             <title>Personal Details</title>
             <script type="text/javascript" src="js/scripts.js"></script>
-            <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Roboto:300,:500" rel="stylesheet">
             <link rel="stylesheet" type="text/css" href="/css/styles.css">
     </head>
     <body>
         <div class="index_div">
             <form>
-                <div class="f_name">
-                <input type="text" name="first_name" value="Enter First Name">
+                <div class="name">
+                    <input class="index_input" type="text" name="first_name" placeholder="Enter First Name">
+                </div><!--
+                --><div class="name">
+                    <input class="index_input" type="text" name="last_name" placeholder="Enter Last Name"><br>
                 </div>
-                <div class="l_name">
-                <input type="text" name="last_name" value="Enter Last Name"><br>
+                <div class="submit">
+                    <input class="index_submit" type="submit" value="Submit">
                 </div>
-                <div class="submit"><input type="submit" value="Submit"></div>
             </form>
         </div>
     </body>
