--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,28 +1,66 @@
 body
 {
-    background-color: midnightblue;
+    background-color: steelblue;;
 }
 .index_div
 {
-    background-color: steelblue;
     padding: 70px 70px;
     text-align: center;
+    height: 70%;
 }
-.f_name
+.name
 {
-    background-color: chartreuse;
     width: 50%;
-    height: 20%;
-}
-.l_name
-{
-    background-color: brown;
-    width: 50%;
-    height: 20%;
+    height: 5%;
+    display: inline-block;
+    padding: 60px 0px;
+    line-height: 5%;
+    text-align: center;
 }
 .submit
 {
-    background-color: aliceblue;
-    width: 90%;
-    height: 30%;
+    width: 100%;
+    height: 5%;
+    padding: 60px 0px;
+    line-height: 5%;
+    text-align: center;
+}
+.index_input
+{
+    width: 80%;
+    padding: 20px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    text-align: center;
+    background-color: darkslategrey;
+    color: whitesmoke;
+    border: 5px solid #0400ff;
+    border-radius: 25px;
+    outline: none;
+    font-size: 20px;
+}
+.index_input:focus{
+    background-color: #5e0606;
+    border: 5px solid gold;
+}
+.index_submit
+{
+    width: 40%;
+    padding: 10px 10px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    text-align: center;
+    background-color: darkslategrey;
+    color: whitesmoke;
+    border: 5px solid #0400ff;
+    border-radius: 25px;
+    outline: none;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.index_submit:focus{
+    background-color: #5e0606;
+    border: 5px solid gold;
+    color: goldenrod;
 }
