--- a/views/lucky.erb
+++ b/views/lucky.erb
@@ -1,11 +1,15 @@
-<html>
-    <head>
-            <title>Personal Details</title>
-            <script type="text/javascript" src="js/scripts.js"></script>
-            <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-            <link rel="stylesheet" type="text/css" href="/css/styles.css">
-    </head>
-    <body>
-        
-    </body>
-</html>
+<head>
+        <title>Personal Details</title>
+        <script type="text/javascript" src="js/scripts.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,:500" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/css/styles.css">
+</head>
+<body>
+    <div>
+        <%= first_name%>
+        <%= last_name%>
+        <%= mail_info%>
+        <%= state%>
+        <%= zipcode%>
+    </div>
+</body>
