--- a/views/personal.erb
+++ b/views/personal.erb
@@ -1,11 +1,18 @@
-<html>
-    <head>
-            <title>Personal Details</title>
-            <script type="text/javascript" src="js/scripts.js"></script>
-            <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-            <link rel="stylesheet" type="text/css" href="/css/styles.css">
-    </head>
-    <body>
-        
-    </body>
-</html>
+<head>
+        <title>Personal Details</title>
+        <script type="text/javascript" src="js/scripts.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/css/styles.css">
+</head>
+<body class="welcome">
+    <div class="header">Welcome, <%= first_name%> <%= last_name%>!</div>
+    <div class="index_div">
+        <form method="post" action="/location">
+            <input class="index_input" type="text" name="mail_info" placeholder="Enter where you get your mail"><br>
+            <input class="index_input" type="text" name="state" placeholder="Enter the state you live in"><br>
+            <input class="index_input" type="text" name="zipcode" placeholder="Enter your zipcode" pattern="\d{5}-?(\d{4})?"><br>
+            <input class="index_submit" type="submit" Value="Submit">
+        </form>
+    </div>
+    
+</body>
