Styling is done for pages 1, 2, and 3, all information is being passed to each page succefully, only need to syle the last page.

--- a/views/display.erb
+++ b/views/display.erb
@@ -1,11 +1,16 @@
 <head>
         <title>Personal Details</title>
         <script type="text/javascript" src="js/scripts.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,:500" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
     <div>
-
+        <%=first_name%>
+        <%=last_name%>
+        <%=mail_info%>
+        <%=state%>
+        <%=zipcode%>
+        <%=sum%>
     </div>
 </body>
