--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <head>
         <title>Personal Details</title>
         <script type="text/javascript" src="js/scripts.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,:500" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <input class="index_input" type="text" name="last_name" placeholder="Enter Last Name"><br>
             </div>
             <div class="submit">
-                <input class="index_submit" type="submit" value="Submit">
+                <input class="next" type="submit" value="Next &raquo;">
             </div>
         </form>
     </div>
