--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,9 +43,9 @@ body
     background-color: #5e0606;
     border: 5px solid gold;
 }
-.index_submit
+.next
 {
-    width: 40%;
+    width: 30%;
     padding: 10px 10px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -58,7 +58,31 @@ body
     font-size: 25px;
     font-weight: 500;
 }
-
+.previous
+{
+    width: 30%;
+    padding: 10px 10px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    text-align: center;
+    background-color: #4f6868;
+    color: whitesmoke;
+    border: 5px solid #0400ff;
+    border-radius: 25px;
+    outline: none;
+    font-size: 25px;
+    font-weight: 500;
+}
+input:hover
+{
+    background-color: #bdbdbd;
+    color: black;
+}
+button:hover
+{
+    background-color: #bdbdbd;
+    color: black;
+}
 .index_submit:focus{
     background-color: #5e0606;
     border: 5px solid gold;
@@ -68,7 +92,7 @@ body
 {
     text-align: center;
     font-size: 80px;
-    font-weight: 500;
+    font-weight: 300;
     color: darkgray;
     padding: 10px;
     height: 10%;
@@ -84,4 +108,22 @@ body
 {
     background-color: aliceblue;
     
+}
+.header2
+{
+    text-align: center;
+    font-size: 50px;
+    font-weight: 500;
+    color: darkgray;
+    padding: 20px;
+    height: 10%;
+}
+.fav_num
+{
+   background-image: url("/images/mekong-green.png");
+}
+.lucky_div
+{
+    padding: 20px 70px;
+    text-align: center;
 }
