--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -127,3 +127,79 @@ button:hover
     padding: 20px 70px;
     text-align: center;
 }
+.display
+{
+    background-image: url("/images/display.png");
+}
+.display_head
+{
+    text-align: center;
+    font-size: 80px;
+    font-weight: 500;
+    color: #e7d63e9f;
+    padding: 10px;
+    height: 10%;
+    text-shadow: 1px 1px 15px #e7d63e;
+}
+.display_box
+{
+    text-align: center;
+    padding: 15px;
+}
+.display_info
+{
+    width: 35%;
+    height: 5%;
+    display: inline-block;
+    padding: 25px 0px;
+    line-height: 5%;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 300;
+    color:white;
+    text-shadow: 1px 1px 10px #000000;
+}
+.display_result
+{
+    width: 35%;
+    height: 5%;
+    display: inline-block;
+    padding: 25px 0px;
+    line-height: 5%;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 300;
+    color: white;
+    text-shadow: 1px 1px 10px #e7d63e;
+}
+.display_ramble
+{
+    height: 5%;
+    display: inline-block;
+    padding: 20px 15px;
+    line-height: 5%;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 300;
+    color:white;
+    text-shadow: 1px 1px 10px #000000;
+}
+.sum
+{
+    height: 5%;
+    padding: 10px;
+    font-weight: 500;
+    font-size: 50px;
+    text-align: center;
+    color: white;
+    text-shadow: 1px 1px 10px #e7d63e;
+}
+.display_body
+{
+    background-color: #1f181898;
+    border-radius: 15px;
+    padding: 15px 0px 20px 0px;
+    margin: 8px;
+    width: 90%;
+    height: 90%;
+}
