made the text in the input field not turn black when hovering over them, as requested from Jtong

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,7 +76,16 @@ body
 input:hover
 {
     background-color: #bdbdbd;
-    color: black;
+}
+.next:hover
+{
+    background-color: #bdbdbd;
+    color: #000000;
+}
+.previous:hover
+{
+    background-color: #bdbdbd;
+    color: #000000;
 }
 button:hover
 {
